--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,18 +19,9 @@
 
         <div class="content_instance_big">
             <h2>The Characters of Star Wars, Episode 5</h2>
-            <img th:src="@{../images/image4.jpg}"/>
-            <p>Bespoke marfa dreamcatcher lumbersexual microdosing, stumptown hoodie shabby chic. Banh mi art party echo
-                park forage man braid brooklyn marfa, tacos flannel cornhole vegan tumblr actually tofu. Seitan ramps
-                adaptogen art party organic authentic poke man braid, sartorial leggings cray williamsburg heirloom
-                fingerstache flexitarian. Vegan bushwick synth shabby chic gastropub organic food truck VHS offal chia
-                pop-up. Celiac four loko literally blog tattooed deep v pitchfork PBR&B aesthetic marfa.e</p>
-            <p>Selvage irony hot chicken flexitarian wolf distillery woke. VHS lyft activated charcoal irony. Man braid
-                woke four loko street art YOLO crucifix palo santo authentic vegan live-edge hammock kale chips. Food
-                truck af copper mug aesthetic man braid vice beard celiac activated charcoal mlkshk. Activated charcoal
-                lyft williamsburg skateboard ennui craft beer green juice yr kale chips four dollar toast la croix
-                gochujang tote bag shabby chic. Literally pug roof party, knausgaard leggings yr artisan actually 3 wolf
-                moon unicorn distillery bitters flexitarian.</p>
+            <!--<ul th:each="characterURL : ${characterList}">-->
+                <!--<li th:text="${characterURL.characters}">First Characters</li>-->
+            </ul>
         </div>
 
     </div>
