--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -231,6 +231,10 @@ h3 {
     padding-bottom: 2px;
 }
 
+h2 {
+    padding-top: 10px;
+}
+
 form {
     padding-top: 10px;
     padding-bottom: 10px;
