--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,5 +1,3 @@
-/* A Free Design by Bryant Smith (bryantsmith.com) */
-
 html, body {
     text-align: center;
 }
@@ -26,8 +24,23 @@ body {
     text-align: left;
 }
 
+a:link, a:visited {
+    color: black;
+    padding: 7px 13px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
+
+a:hover, a:active {
+    background-color: darkgray;
+}
 
 html, body {
+    text-align: center;
+}
+
+ul {
     text-align: center;
 }
 
@@ -49,13 +62,6 @@ html, body {
     clear: both;
 }
 
-#top img {
-    padding-left: 15px;
-    padding-right: 15px;
-    float: right;
-}
-
-
 #header {
     background-image: url(../images/header.png);
     background-repeat: no-repeat;
@@ -70,7 +76,7 @@ html, body {
     padding-top: 7px;
     color: #000000;
     text-align: center;
-    font-size: 47px;
+    font-size: 35px;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -86,7 +92,6 @@ html, body {
     font-family: Arial, Helvetica, sans-serif;
     text-align: justify;
 }
-
 
 #content {
     width: 742px;
@@ -106,7 +111,6 @@ html, body {
     font-size: 32px;
 }
 
-
 #content .content_instance {
     width: 742px;
     height: 300px;
@@ -121,27 +125,14 @@ html, body {
     padding-left: 10px;
     padding-right: 10px;
     text-align: center;
-
 }
 
 #content .content_instance_big p {
-    font-size: 16px;
+    font-size: 20px;
     color: #000000;
     padding-left: 10px;
     padding-right: 10px;
 }
-
-li {
-    font-size: 16px;
-    color: #000000;
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
-a img {
-    border: none;
-}
-
 
 #content .content_instance_big {
     padding-top: 10px;
@@ -151,7 +142,6 @@ a img {
     background-image: url(../images/content_back.png);
     background-repeat: repeat-x;
 }
-
 
 #content .content_instance img {
     width: 300px;
@@ -193,36 +183,9 @@ a img {
     padding-right: 20px;
 }
 
-.links a, .links a:visited {
-    font-size: 14px;
-    font-weight: bold;
-    text-decoration: none;
-    color: #E9EEF3;
-    background-color: #000000;
-    padding: 3px;
-}
-
-.links a:hover {
-    color: #FFFFFF;
-    background-color: #333333;
-}
-
-#footer {
-    text-align: center;
-    width: inherit;
-    color: #E6E6E6;
-    font-size: 11px;
-}
-
-#footer a, #footer a:visited {
-    color: #FFFFFF;
-}
-
-.name {
-    text-align: center;
-    padding-top: 10px;
-    padding-bottom: 10px;
-
+.name li {
+    font-size: 20px;
+    list-style-type: none;
 }
 
 h3 {
