--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link rel="stylesheet" type="text/css" th:href="@{/style.css}"/>
+    <link rel="shortcut icon" type="image/png" th:href="@{/images/favicon.ico}"/>
     <title>Final Assessment</title>
 </head>
 
